--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bintang.bangkitcapstoneproject" >
+    package="com.bintang.bangkitcapstoneproject">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,22 +10,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BangkitCapstoneProject" >
+        android:theme="@style/Theme.BangkitCapstoneProject">
 
         <activity
             android:name=".BasedActivity"
             android:exported="true"
-            android:label="@string/title_activity_based" >
+            android:label="@string/title_activity_based">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
 
         <activity
-            android:name=".MainActivity0"
+            android:name=".ui.restaurant_detail.RestaurantDetailActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name=".MainActivity"
             android:exported="true" />
 
     </application>
