--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.BangkitCapstoneProject">
 
         <activity
-            android:name=".BasedActivity"
-            android:exported="true"
-            android:label="@string/title_activity_based">
+            android:name=".ui.auth.LoginActivity"
+            android:exported="true" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +24,13 @@
         </activity>
 
         <activity
+            android:name=".BasedActivity"
+            android:exported="true"
+            android:label="@string/title_activity_based" />
+
+        <activity
             android:name=".ui.restaurant_detail.RestaurantDetailActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
