--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.BangkitCapstoneProject">
 
         <activity
+            android:name=".ui.auth.RegisterActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="true" >
 
