--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,12 +71,16 @@ dependencies {
     implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.1.0'
     implementation 'androidx.camera:camera-core:1.0.2'
 
+    //PAGING 3
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    //TESTING TOOLS
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // CameraX
-    def camerax_version = "1.2.0-alpha01"
+    // CAMERA X
+    def camerax_version = "1.2.0-alpha02"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
