--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,6 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.4.0"
 
     // Tensorflow Lite
-    implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly"
-    // implementation "org.tensorflow:tensorflow-lite:2.9.0"
+    implementation 'org.tensorflow:tensorflow-lite:2.9.0'
+    // implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly"
 }
