--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
+    //DATA STORE
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
     //EASY PERMISSION
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
