--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BangkitCapstoneProject">
 
-        <!--RELEASE MODE-->
         <activity
-            android:name=".ui.auth.login.LoginActivity"
-            android:exported="true" >
+            android:name=".BasedActivity"
+            android:exported="true"
+            android:label="@string/title_activity_based" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <activity
-            android:name=".BasedActivity"
-            android:exported="true"
-            android:label="@string/title_activity_based" />
-
+            android:name=".ui.auth.login.LoginActivity"
+            android:exported="true" />
 
         <activity
             android:name=".ui.food_detector.FoodValidatorText"
@@ -44,31 +41,32 @@
             android:name=".MainActivity"
             android:exported="false" />
           <activity
-            android:name=".ui.auth.RegisterActivity"
+            android:name=".ui.auth.register.RegisterActivity"
             android:exported="false" />
 
         <activity
             android:name=".ui.restaurant_detail.RestaurantDetailActivity"
             android:exported="true" />
 
+
+        <!--        <activity-->
+        <!--            android:name=".BasedActivity"-->
+        <!--            android:exported="true"-->
+        <!--            android:label="@string/title_activity_based" />-->
+
+        <!--        <activity-->
+        <!--            android:name=".ui.auth.login.LoginActivity"-->
+        <!--            android:exported="true" >-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
+
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
-<!--        &lt;!&ndash;DEVELOP MODE&ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name=".ui.auth.login.LoginActivity"-->
-<!--            android:exported="true" />-->
-
-<!--        <activity-->
-<!--            android:name=".BasedActivity"-->
-<!--            android:exported="true"-->
-<!--            android:label="@string/title_activity_based" >-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
 
     </application>
 
