--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
 
         <activity
-            android:name=".ui.food_detector.FoodValidatorText"
+            android:name=".ui.food_detector.FoodDetectorText"
             android:exported="false" />
         <activity
             android:name=".ui.food_detector.FoodDetectorCamera"
